fix css of light/ dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,13 @@
     --dm-text: hsl(0, 0%, 100%);
     --dm-elements: hsl(209, 23%, 22%);
 
-    --dm-inputs: hsl(0, 0%, 52%);
-    --lm-inputs: white;
+    --dm-inputs: white;
+    --lm-inputs: hsl(0, 0%, 52%);
 
     --lm-background: hsl(0, 0%, 98%);
     --lm-text: hsl(200, 15%, 8%);
     --lm-elements: hsl(0, 0%, 100%);
+
     
     --fw-300: 300;
     --fw-600: 600;
@@ -53,7 +54,7 @@
     .lm-text{
         color: var(--lm-text);
     }
-    .lm-elemnts{
+    .lm-elements{
         color: var(--lm-elements)
     }
     .dm-text{
@@ -63,7 +64,10 @@
         color: var(--dm-elements)
     }
     .lm-inputs{
-        background-color: var(--lm-inputs);
+        color: var(--lm-inputs);
+    }
+    .dm-inputs{
+        color: var(--dm-inputs);
     }
     .lm-background{
         background-color: var(--lm-background);
@@ -71,12 +75,17 @@
     .dm-background{
         background-color: var(--dm-background);
     }
+   
 /* End utilities classes  */
 /* Start blocks */
     /* start header  */
         .header{
             min-height: 100% ;
-            box-shadow: 0 0px 5px rgba(0,0,0,.2)
+            box-shadow: 0 0px 5px rgba(0,0,0,.2);
+            background-color: var(--lm-elements);
+        }
+        .header *{
+            color: var(--lm-text)
         }
         .header > div{
             width: 100%;
@@ -88,6 +97,12 @@
     /* End header  */
     /* Start main  */
         /* start second header "filter by region and search countries Bar" */
+            .main{
+                background-color: var(--lm-background);
+            }
+            .main *{
+                color: var(--lm-text);
+            }
             .searchFilterBar{
                 padding-block: 2rem;
             }
@@ -98,13 +113,14 @@
             }
             .searchFilterBar > *{
                 min-height: 3rem;
-                background-color: var(--lm-inputs);
+                background-color: blue;
                 display:flex;
                 align-items: center;
                 align-content: center;
                 max-width: 100%;
                 border-radius: .25rem;
                 box-shadow: 0 0 .75rem -5px rgba(0,0,0,.2);
+                background-color: var(--lm-elements);
             }
             
             .input-container{
@@ -112,11 +128,16 @@
             }
             .input-container i{
                 padding-inline: 1rem;
-                color: var(--dm-inputs);
+                color: var(--lm-inputs);
             }
-            .input-container input{
+            .searchInput{
                 background-color: transparent;
+                color: var(--lm-text);
                 width: 100%;
+            }
+            .searchInput::placeholder{
+                color: hsl(0, 0%, 52%);
+                font-weight: var(--fw-300);
             }
             @media(max-width: 40em){
                 .searchFilterBar{
@@ -141,7 +162,7 @@
                 cursor: pointer;
                 outline: none;
                 border: none;
-                color: var(--dm-inputs);
+                color: var(--lm-inputs);
             }
             /* End second header "filter by region and search countries Bar" */
         /* Start the main block that display all the countries's cartes  */
@@ -166,6 +187,8 @@
                 min-height: 20rem;
                 flex-direction: column;
                 box-shadow: 0 0 .5rem 0px rgba(0,0,0,.2);
+                border-radius: .25rem;
+                overflow: hidden;
             }
             .carte:hover{
                 box-shadow: 0 0 .5rem 0px rgba(0,0,0,.7);
@@ -182,6 +205,7 @@
                 padding-block: 2rem;
                 padding-inline: 1rem;
                 width: 100%;
+                background-color: var(--lm-elements);
             }
             .carte__infos__title {
                 margin-top: 0;
@@ -191,12 +215,14 @@
             .main2{
                 min-height: calc(100vh - 64px);
             }
+            .main2 
             .back-button{
                 padding-inline: 1.7rem;
                 padding-block: .6rem;
                 margin-block: 2rem;
                 box-shadow: 0 0 .5rem 0 rgba(0,0,0,.2);
                 border-radius: .3rem;
+                background-color: var(--lm-elements);
             }
             @media (min-width: 40em){
                 .country-info-container{
@@ -213,9 +239,10 @@
                 display: block;
                 width: 30rem;
                 max-width: 100%;
-                height: 20rem;
+                height: 17rem;
                 background-repeat: no-repeat;
                 background-size: 100% 100%;
+                box-shadow: 0 0 .8rem .01rem rgba(0,0,0,.3);
             }
             @media(max-width: 40em){
                 .country-info-image{
@@ -226,7 +253,7 @@
             }
             .country-info-data{
                 width: 50%;
-                min-height: 20rem;
+                min-height: 17rem;
                 container-type : inline-size;
             }
             @media(max-width: 40em) {
@@ -240,6 +267,11 @@
             .country-info-data__micro-container{
                 align-items: flex-start;
             }
+            .country-info-data__micro-container .fw-600{
+            }
+            .country-info-data__micro-container .fw-600 + *{
+                color: gray;
+            }
             @container (max-width: 25em){
                 .country-info-data__micro-container{
                     flex-direction: column;
@@ -252,15 +284,21 @@
                 padding-block: 2rem;
             }
             .border-countries1{
+                padding-left: .5rem;
             }
             .border-countries1Inside {
+                color: var(--lm-text);
+                background-color: var(--lm-elements);
                 font-weight: var(--fw-300);
                 display: inline-block;
-                padding-block: .25rem;
-                padding-inline: .7rem;
+                padding-block: .2rem;
+                padding-inline: 1rem;
                 box-shadow: 0 0 .5rem 0 rgba(0,0,0,.2);
                 border-radius: .25rem;
                 font-size: 14px;
+                margin-right: .3rem;
+                margin-top: .2rem;
+                
             }
            
         /* End ".main2" page of full-data of the country clicked  */
